--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,3 +14,5 @@ Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.1
 URL: https://github.com/mendoncalf/tccR4ds2
 BugReports: https://github.com/mendoncalf/tccR4ds2/issues
+Depends: 
+    R (>= 2.10)
