--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -1,6 +1,7 @@
 pandoc: 2.11.4
 pkgdown: 1.6.1
 pkgdown_sha: ~
-articles: {}
-last_built: 2021-05-01T13:47Z
+articles:
+  funcoes: funcoes.html
+last_built: 2021-05-01T14:50Z
 
