--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -26,5 +26,7 @@ Imports:
 Suggests: 
     rmarkdown,
     markdown,
-    knitr
+    knitr,
+    testthat (>= 3.0.0)
 VignetteBuilder: knitr
+Config/testthat/edition: 3
